bugfix #69 a #351 - refactoring anket, zmena schematu, lepsi podpora vice moznosti, moznost vlozit do clanku ci blogu, prehlednejsi vypis anket
git-svn-id: https://zdrojaky.abclinuxu.cz/svn-abclinuxu/trunk@1431 be82d567-0701-4079-a524-1ea639e27e29